[package]
name = "nicotine"
version = "0.1.0"
edition = "2021"
description = "High-performance EVE Online multiboxing tool for X11/Linux"
license = "MIT"
repository = "https://github.com/isomerc/nicotine"

[dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
daemonize = "0.5"
nix = { version = "0.29", features = ["fs"] }
