[package]
name = "nicotine"
version = "0.2.2"
edition = "2021"
description = "High-performance EVE Online multiboxing tool for Linux (X11 & Wayland)"
license = "MIT"
repository = "https://github.com/isomerc/nicotine"

[dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"
daemonize = "0.5"
nix = { version = "0.29", features = ["fs"] }
evdev = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
